--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^5.7.2"
   },
   "devDependencies": {
+    "@types/bun": "^1.1.0",
     "@types/node": "^20.10.0",
     "vitest": "^2.1.8"
   }
